--- a/Souce/PTXDPM/PTXDPM/Customer/assets/css/style.css
+++ b/Souce/PTXDPM/PTXDPM/Customer/assets/css/style.css
@@ -3837,3 +3837,22 @@ a.cpns {
 .w_content {
   padding: 0;
 }
+.BagDetail
+{
+	width:70%;
+	float:left;
+	border:1px solid #c6c6c6;
+	padding: 5px;
+}
+.Order
+{
+	width:30%;
+	float:left;
+	border: 1px solid #c6c6c6;
+	padding:20px;
+}
+.Finish
+{
+    border: 1px solid #c6c6c6;
+	padding:20px;
+}
