--- a/Souce/PTXDPM/PTXDPM/Customer/assets/css/style.css
+++ b/Souce/PTXDPM/PTXDPM/Customer/assets/css/style.css
@@ -3856,3 +3856,35 @@ a.cpns {
     border: 1px solid #c6c6c6;
 	padding:20px;
 }
+.ListGroup
+{
+width:1140px;
+height:807px;
+float:left;
+}
+.ChiaBaCot
+{
+	width:360px;
+	float:left;
+	padding-left:20px;
+	height:269px;
+}
+.TenNhom
+{
+float:left;
+	margin:auto;
+}
+.showProduct
+{
+	
+		background:#ffffff;
+		color:#ff6978;
+		width: 95%;
+		float: left;
+		margin:0 1%;
+}
+.showProduct: hover{
+		
+		background:#e9e9e9;
+		
+}
