Thuan add source va database

--- a/Souce/PTXDPM/PTXDPM/Customer/Site.Master
+++ b/Souce/PTXDPM/PTXDPM/Customer/Site.Master
@@ -180,7 +180,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                     </asp:ContentPlaceHolder>
                 </div> 
-    </div>>
+    </div>
 
 <div class="foot-top">
 	<div class="container">
