--- a/Source/PTXDPM/PTXDPM/Customer/assets/css/style.css
+++ b/Source/PTXDPM/PTXDPM/Customer/assets/css/style.css
@@ -3837,3 +3837,62 @@ a.cpns {
 .w_content {
   padding: 0;
 }
+
+.BagDetail
+{
+	width:70%;
+	float:left;
+	border:1px solid #c6c6c6;
+	padding: 5px;
+}
+.Order
+{
+	width:30%;
+	float:left;
+	border: 1px solid #c6c6c6;
+	padding:20px;
+}
+.Finish
+{
+    border: 1px solid #c6c6c6;
+	padding:20px;
+}
+.ListGroup
+{
+width:1140px;
+height:807px;
+float:left;
+}
+.ChiaBaCot
+{
+	width:360px;
+	float:left;
+	padding-left:20px;
+	height:269px;
+}
+.TenNhom
+{
+float:left;
+	margin:auto;
+}
+.showProduct
+{
+	
+		background:#ffffff;
+		color:#ff6978;
+		width: 95%;
+		float: left;
+		margin:0 1%;
+}
+.showProduct: hover{
+		
+		background:#e9e9e9;
+		
+}
+
+.ChiTietHoaDon
+{
+	border:2px solid #c6c6c6;
+	border-radius:15px;
+	padding:20px;
+}
